[gd_scene load_steps=3 format=3 uid="uid://cojyo2p2tueoc"]

[ext_resource type="Script" path="res://World/View/ViewportsContainer.gd" id="1_1ghu0"]
[ext_resource type="PackedScene" uid="uid://dajxuho4ju2gn" path="res://World/View/SubViewport.tscn" id="1_k1ulx"]

[node name="ViewportsContainer" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
alignment = 1
script = ExtResource("1_1ghu0")

[node name="SubViewport0" parent="." instance=ExtResource("1_k1ulx")]
layout_mode = 2

[node name="SubViewport1" parent="." instance=ExtResource("1_k1ulx")]
layout_mode = 2
